[package]
name = "rust-pong"
version = "0.1.0"
authors = ["Hector Pulido <hectorandrespp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
bevy = "0.5"
heron = { version = "0.12.1", default-features = false, features = ["2d"] }