[package]
name = "rust-pong"
version = "0.1.0"
edition = "2018"
authors = ["Hector Pulido <hectorandrespp@gmail.com>"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8.0"
heron = { version = "0.12.1", default-features = false, features = ["2d"] }


# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = "0.5"

# wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
bevy_webgl2 = "0.5"

# This version of bevy needs:
# cargo update -p tracing-wasm --precise 0.2.0